More full vacancy tweaks

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -539,6 +539,11 @@ a {
   }
   .mdc-card--full-content {
     border-top: none;
+    h4 {
+      margin: 0 0 $unit;
+      font-size: 1.5rem;
+      font-weight: 400;
+    }
     .key-info-extra {
       // margin-top: $unit*1.5;
       padding: $unit;
@@ -564,8 +569,7 @@ a {
         background: transparent;
       }
       h4 {
-        margin: $unit 0 $unit/2;
-        font-size: 1.2rem;
+        margin: $unit/2 0 $unit/2;
       }
       h4:first-child {
         margin-top: 0;
