--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -107,8 +107,8 @@
               role="button" aria-pressed="true"
               aria-label="Show roles" tabindex="0" data-mdc-auto-init="MDCIconToggle"
               data-icon-inner-selector=".far"
-              data-toggle-on='{"cssClass": "fa-chevron-up", "label": "Show roles"}'
-              data-toggle-off='{"cssClass": "fa-chevron-down", "label": "Hide roles"}'>
+              data-toggle-on='{"cssClass": "fa-chevron-down", "label": "Show roles"}'
+              data-toggle-off='{"cssClass": "fa-chevron-up", "label": "Hide roles"}'>
           <i class="far fa-chevron-up" aria-hidden="true"></i>
         </span>
       </h3>
@@ -120,7 +120,14 @@
 
       <h3 class="mdc-drawer__content-heading">
         Sectors
-        <span class="far fa-chevron-up mdc-text-field__icon pull-right" data-collapse-target="{{instance_id}}-sectors-collapse"></span>
+        <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{instance_id}}-sectors-collapse "
+              role="button" aria-pressed="true"
+              aria-label="Show sectors" tabindex="0" data-mdc-auto-init="MDCIconToggle"
+              data-icon-inner-selector=".far"
+              data-toggle-on='{"cssClass": "fa-chevron-down", "label": "Show sectors"}'
+              data-toggle-off='{"cssClass": "fa-chevron-up", "label": "Hide sectors"}'>
+          <i class="far fa-chevron-up" aria-hidden="true"></i>
+        </span>
       </h3>
       <div id="{{instance_id}}-sectors-collapse">
         {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
@@ -130,12 +137,20 @@
 
       <h3 class="mdc-drawer__content-heading">
         Statuses
-        <span class="far fa-chevron-up mdc-text-field__icon pull-right"></span>
+        <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{instance_id}}-statuses-collapse "
+              role="button" aria-pressed="true"
+              aria-label="Show statuses" tabindex="0" data-mdc-auto-init="MDCIconToggle"
+              data-icon-inner-selector=".far"
+              data-toggle-on='{"cssClass": "fa-chevron-down", "label": "Show statuses"}'
+              data-toggle-off='{"cssClass": "fa-chevron-up", "label": "Hide statuses"}'>
+          <i class="far fa-chevron-up" aria-hidden="true"></i>
+        </span>
       </h3>
+      <div id="{{instance_id}}-statuses-collapse">
       {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
       {{> term_checkbox key=key field="role_status" selected=../request.params.query.role_status instance_id=../instance_id}}
       {{/each ~}}
-
+      </div>
       <div class="h-margin v-margin">
         <button class="mdc-button mdc-button--raised mdc-button--fullwidth" type="submit" id="{{instance_id}}-search-submit">
           Search jobs
