--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -139,6 +139,7 @@ li,
 p,
 footer h3,
 .mdc-tab,
+.mdc-chip,
 .mdc-card,
 .mdc-button,
 .mdc-form-field,
@@ -553,12 +554,16 @@ a {
         padding: $unit/5 $unit/2;
         vertical-align: top;
         font-weight: 600;
+        color: white;
         background-color: $mdc-theme-primary;
       }
       .mdc-chip:hover {
         text-decoration: none;
         color: white;
         background-color: $mdc-theme-primary-dark;
+      }
+      a {
+        color: $mdc-theme-primary-dark;
       }
     }
     .detailed-info {
