--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -115,7 +115,7 @@
             {{#if closing_date ~}}
             <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
               <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="Closing date"></span></span>
-              Closing on {{momentFormat (moment closing_date "x") "Do MMMM YYYY \a\t h:mm a"}}
+              Closing on {{momentFormat (moment closing_date "x") "dddd \t\h\e Do \o\f MMMM YYYY \a\t h:mm a"}}
             </li>
             {{/if ~}}
           </ul>
