--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -141,9 +141,12 @@ footer h3,
 .mdc-tab,
 .mdc-chip,
 .mdc-card,
+.mdc-select,
 .mdc-button,
 .mdc-form-field,
+.mdc-text-field,
 .mdc-typography,
+.mdc-floating-label,
 .mdc-card__subtitle,
 .mdc-textfield__input,
 .mdc-typography--body1,
