--- a/db/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/db/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -27,12 +27,14 @@
       <div class="key-info-extra">
         <ul class="fa-ul">
           {{#if organisation.website ~}}
+          {{#compare organisation.website "===" null ~}}
           <li class="mdc-card__info--vacancy-website mdc-typography--body1">
             <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
             <a href="{{organisation.website_url}}">
               {{organisation.website}}
             </a>
           </li>
+          {{/compare ~}}
           {{/if ~}}
         </ul>
       </div>
