added missing text

--- a/db/configurations/digitalparticipation/templates/skill-up-detail.hbs
+++ b/db/configurations/digitalparticipation/templates/skill-up-detail.hbs
@@ -72,7 +72,7 @@
       </ul>
       {{else}}
       {{#compare request.params.slug "===" "handling-info"}}
-      <h3><span class="number">2</span> </h3>
+      <h3><span class="number">2</span> Handling information and content</h3>
       <ul class="mdc-layout-grid__cell collapsible" data-collapsible="accordion">
         <li class="active">
           <div class="mdc-layout-grid__cell collapsible-header active"><h4>&mdash; Individuals</h4></div>
