--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -28,6 +28,8 @@
         </div>
         <div id="search-view-jobs" class="search-form">
           <form action="/search" method="get">
+            <input type="hidden" name="lat" value="">
+            <input type="hidden" name="lng" value="">
             <div class="mdc-layout-grid">
               <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
