--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -35,7 +35,7 @@
             </li>
             {{/if ~}}
             {{#ifAny sectors roles ~}}
-            <li class="mdc-card__info--vacancy-website mdc-typography--body1">
+            <li class="mdc-card__info--vacancy-categories mdc-typography--body1">
               <span class="fa-li"><span class="far fa-tags fa-fw" title="Roles"></span></span>
               {{#each sectors ~}}
               <a href="/search?sector={{urlencode this}}" class="mdc-chip">
@@ -56,12 +56,14 @@
             </li>
             {{/if ~}}
             {{#if organisation.website ~}}
+            {{#compare organisation.website "===" null ~}}
             <li class="mdc-card__info--vacancy-website mdc-typography--body1">
               <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
               <a href="{{organisation_website_url}}">
                 {{organisation.website}}
               </a>
             </li>
+            {{/compare}}
             {{/if ~}}
           </ul>
         </div>
