--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -48,7 +48,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
                   <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-                    <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
+                    <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button" onclick="geolocate();"></span>
                     <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" placeholder=" ">
                     <label for="where-jobs" class="mdc-floating-label">
                       Location
