Fixed geo query bug

--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -77,7 +77,7 @@
       </div>
 
       <input type="hidden" name="lat" value="{{request.params.query.lat}}">
-      <input type="hidden" name="lon" value="{{request.params.query.lon}}">
+      <input type="hidden" name="lng" value="{{request.params.query.lng}}">
 
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
