--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -582,6 +582,10 @@ a {
       h4:first-child {
         margin-top: 0;
       }
+      .thumbnail {
+        margin-top: $unit;
+        margin-right: $unit;
+      }
     }
   }
 }
