--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1057,8 +1057,10 @@ body {
   padding: 0 $unit*1.5 $unit !important;
   box-shadow: $toolbar-shadow-reverse;
 }
-.tfn-latest {
+.home .tfn-latest {
   background-color: #fdfdfd;
+}
+.tfn-latest {
   padding: 0 $unit*1.5 0 !important;
   .mdc-card {
     box-shadow: none;
