--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -624,6 +624,9 @@ hr {
 .mdc-drawer__content-heading {
   margin: 0;
   padding: $unit;
+  .mdc-icon-toggle {
+    margin-top: -$unit*(3/4);
+  }
   .far.pull-right {
     line-height: $unit*1.7;
   }
