--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -104,7 +104,7 @@
       <h3 class="mdc-drawer__content-heading">
         Roles
         <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{instance_id}}-roles-collapse "
-              role="button" aria-pressed="true"
+              role="button" aria-pressed="false"
               aria-label="Show roles" tabindex="0" data-mdc-auto-init="MDCIconToggle"
               data-icon-inner-selector=".far"
               data-toggle-on='{"cssClass": "fa-chevron-down", "label": "Show roles"}'
