--- a/db/configurations/humanrightsdeclaration/layouts/default.hbs
+++ b/db/configurations/humanrightsdeclaration/layouts/default.hbs
@@ -5,22 +5,22 @@
   <base href="/">
   <!--{section:head}-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-  <link rel="manifest" href="/assets/icons/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/humanrights/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/humanrights/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/humanrights/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/humanrights/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/humanrights/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/humanrights/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/humanrights/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/humanrights/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/humanrights/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/humanrights/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/humanrights/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/humanrights/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/humanrights/favicon-16x16.png">
+  <link rel="manifest" href="/assets/icons/humanrights/manifest.json">
   <meta name="msapplication-TileColor" content="#00838f">
-  <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#00838f">
   <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
   <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
@@ -113,10 +113,10 @@
                     <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
                   </a>
                   <a href="http://www.scottishhumanrights.com" class="brand-logo" title="Scottish Human Rights Commission">
-                    <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none;height:44px;" />
+                    <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none; height:44px; filter: brightness(0) invert(1);" />
                   </a>
                   <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
-                    <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" />
+                    <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" style="filter: grayscale(100%) invert(1); mix-blend-mode: screen;" />
                   </a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
@@ -161,7 +161,7 @@
   <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
   <script type="text/javascript" id="cookieinfo"
   src="/assets/js/cookieinfo.min.js"
-  data-bg="#1A1A19"
+  data-bg="#2C2C2B"
   data-fg="#FFFFFF"
   data-link="#FFFFFF"
   data-divlink="#FFFFFF"
