--- a/db/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/db/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -1,7 +1,7 @@
 <section class="currently-recruiting">
   <div class="mdc-typography--headline5 v-margin-full">
     Currently recruiting &ensp;
-    <span class="mdc-typography--caption">
+    <span class="mdc-typography--body1">
       <a href="/organisations">See all</a>
     </span>
   </div>
