--- a/db/configurations/goodmoves/templates/vacancies/search-rss.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/search-rss.hbs
@@ -1,3 +1,3 @@
-{{#each data.primaryResponse.hits.hits ~}}
+{{#each data.search_data.detailed_results.hits.hits ~}}
 {{{_source.rendered.goodmoves_rss}}}
 {{/each ~}}
