--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -44,7 +44,6 @@
                   <p id="what-jobs-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
                     e.g. Fundraising, Carer, Manager
                   </p>
-                  <div id="search-terms" class="mdc-chip-set"></div>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
                   <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
@@ -80,6 +79,11 @@
                     Search
                     <span class="far fa-search" aria-hidden="true"></span>
                   </button>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                  <div id="search-terms" class="mdc-chip-set"></div>
                 </div>
               </div>
             </div>
