--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -592,6 +592,11 @@ a {
 
 .mdc-chip-set {
   float: left;
+  padding: 0;
+  margin-bottom: $unit;
+  .mdc-chip {
+    margin: 0 $unit 0 0;
+  }
 }
 .top-jobs .top-job,
 .goodmoves-organisation .mdc-card.list .mdc-card__info--vacancy-organisation {
@@ -723,6 +728,9 @@ hr {
     .mdc-chip__text {
       color: white;
     }
+  }
+  .mdc-chip .mdc-chip__text {
+    font-weight: 600;
   }
   .mdc-chip:hover {
     .mdc-chip__icon {
@@ -950,6 +958,9 @@ body {
   }
   .mdc-text-field--box::before, .mdc-text-field--box::after {
     background-color: transparent;
+  }
+  .mdc-floating-label {
+    transform: translateY(-50%) scale(0.75);
   }
 }
 .gm-style .gm-style-iw {
