--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -223,9 +223,13 @@ footer h3,
 
 .goodmoves-page {
   margin: $unit*1.5 0;
+  .x-items {
+    margin-top: 0;
+    margin-bottom: $unit*1.5;
+  }
   .mdc-card {
     padding: $unit;
-    .x-items {
+    .mdc-typography--headline4 {
       margin-top: 0;
     }
   }
@@ -920,6 +924,9 @@ body {
     }
     .mdc-card__media {
       margin: 0;
+    }
+    .fa-li .fa-fw {
+      color: $mdc-theme-secondary;
     }
   }
   .mdc-card__info--vacancy-row,
