--- a/db/configurations/scvo/templates/pages/page-home.hbs
+++ b/db/configurations/scvo/templates/pages/page-home.hbs
@@ -81,10 +81,10 @@
             <div class="mdc-card">
               <div class="mdc-card-inner">
                 <h3>
-                  Voting is now open for the Scottish Charity Awards 2018!
+                  The Scottish Charity Awards are back for 2018!
                 </h3>
                 <p>
-                  Our 40 fabulous finalists have been announced and now is your chance to vote for your favourite to win the People’s Choice Award! Take a look at the shortlist&hellip; and remember, you only have one vote, so make it count! <a href="/scottish-charity-awards">Find out more</a>
+                  There are eight award categories – Charity of the Year, Charity Champion, Demonstrating Digital, Pioneering Project, Terrific Trustee, Leading Light, Celebrating Communities and Cracking Campaign – with the winners to be decided by our panel of judges and announced at our awards ceremony on June 14th at the EICC in Edinburgh. <a href="/scottish-charity-awards">Read more</a>
                 </p>
               </div>
             </div>
