Updated logo with placeholder

--- a/db/configurations/scotlandforeurope/layouts/default.hbs
+++ b/db/configurations/scotlandforeurope/layouts/default.hbs
@@ -50,9 +50,9 @@
           <div class="container-fluid">
             <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
               <span class="mdc-toolbar__title catalog-title">
-                <a href="/" class="brand-logo" title="The Scotland Declaration on Human Rights">
-                  <img src="https://storage.googleapis.com/human-rights-declaration/sdhr-logo.png" class="brand-logo-mobile" />
-                  <img src="https://storage.googleapis.com/human-rights-declaration/sdhr-logo-desktop.png" class="brand-logo-desktop" />
+                <a href="/" class="brand-logo" title="Scotland for Europe">
+                  <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo.png" class="brand-logo-mobile" />
+                  <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo-desktop.png" class="brand-logo-desktop" />
                 </a>
               </span>
             </section>
@@ -74,7 +74,7 @@
         <nav class="mdc-temporary-drawer__drawer">
           <header class="mdc-temporary-drawer__header">
             <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
-              <img src="https://storage.googleapis.com/human-rights-declaration/sdhr-logo.png" class="brand-logo-mobile" />
+              <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo.png" class="brand-logo-mobile" />
             </div>
           </header>
           <nav class="mdc-temporary-drawer__content mdc-list-group">
@@ -104,19 +104,12 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
                 <h3>About</h3>
                 <p>
-                  The <strong>Scotland Declaration on Human Rights</strong> is run by the
+                  <strong>Scotland for Europe</strong> is run by the
                   <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
-                  with support from <a href="https://hrcscotland.org">Human Rights Consortium Scotland</a>, <a href="http://www.scottishscotlandforeurope.com">Scottish Human Rights
-                    Commission</a> and the <a href="https://www.equalityscotlandforeurope.com">Equality and Human Rights Commission</a>
+                  with support from &hellip;
                   </p>
-                  <a href="https://www.equalityscotlandforeurope.com" class="brand-logo" title="Equality Human Rights Scotland">
-                    <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
-                  </a>
-                  <a href="http://www.scottishscotlandforeurope.com" class="brand-logo" title="Scottish Human Rights Commission">
-                    <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none; height:44px; filter: brightness(0) invert(1);" />
-                  </a>
-                  <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
-                    <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" style="filter: grayscale(100%) invert(1); mix-blend-mode: screen;" />
+                  <a href="https://" class="brand-logo" title="">
+                    <img src="https://storage.googleapis.com/" />
                   </a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
